--- a/01-webpack/src/css/test.less
+++ b/01-webpack/src/css/test.less
@@ -7,3 +7,26 @@ html,
 body {
     height: 100%;
 }
+
+// css 选择器是从右往左解析的
+// less 不建议嵌套写样式，除非为了增加样式权重
+#root {
+    width: 100%;
+    height: 100%;
+    background-color: yellowgreen;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../images/1.jpeg?name=jack");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+  }
+
+  .box {
+    width: 100px;
+    height: 100px;
+    background-color: green;
+    background-image: url("../images/3.png");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+  }
