--- a/01-webpack/src/css/iconfont.css
+++ b/01-webpack/src/css/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
-  font-family: "iconfont"; /* Project id 2562388 */
-  src: url('iconfont.woff2?t=1621566654905') format('woff2'),
-       url('iconfont.woff?t=1621566654905') format('woff'),
-       url('iconfont.ttf?t=1621566654905') format('truetype');
+  font-family: "iconfont"; /* Project id 2563083 */
+  src: url('../fonts/iconfont.ttf') format('woff2'),
+       url('../fonts/iconfont.woff') format('woff'),
+       url('../fonts/iconfont.woff2') format('truetype');
 }
 
 .iconfont {
@@ -13,23 +13,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-qiyongyonghu:before {
-  content: "\e617";
+.icon-Dyanjing:before {
+  content: "\e8ab";
 }
 
-.icon-jinyongyonghu:before {
-  content: "\e618";
+.icon-caidan:before {
+  content: "\e8ac";
 }
 
-.icon-zhongzhimima:before {
-  content: "\e619";
-}
-
-.icon-huanyuandefuben:before {
-  content: "\e61a";
-}
-
-.icon-tianjia:before {
-  content: "\e61b";
+.icon-anquan:before {
+  content: "\e8ad";
 }
 
