--- a/01-webpack/src/css/test.less
+++ b/01-webpack/src/css/test.less
@@ -11,8 +11,8 @@ body {
 // css 选择器是从右往左解析的
 // less 不建议嵌套写样式，除非为了增加样式权重
 #root {
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 400px;
     background-color: yellowgreen;
     display: flex;
     justify-content: center;
@@ -26,7 +26,8 @@ body {
     width: 100px;
     height: 100px;
     background-color: green;
-    background-image: url("../images/3.png");
+    background-image: url("../images/1.jpeg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
   }
+
